--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_svg: ^2.0.10+1
   easy_date_timeline: ^1.0.2
   flutter_slider_drawer: ^2.1.3
+  dotted_border: ^2.1.0
+  contained_tab_bar_view: ^0.8.0
+  chips_choice: ^3.0.1
 
 
 dev_dependencies:
