--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dotted_border: ^2.1.0
   contained_tab_bar_view: ^0.8.0
   chips_choice: ^3.0.1
+  fl_chart: ^0.66.2
 
 
 dev_dependencies:
