--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   contained_tab_bar_view: ^0.8.0
   chips_choice: ^3.0.1
   fl_chart: ^0.66.2
+  dashed_circular_progress_bar: ^0.0.6
+  animated_floating_buttons: ^0.0.2
+  flutter_heatmap_calendar: ^1.0.5
 
 
 dev_dependencies:
